--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "antd": "^5.18.1",
+    "dayjs": "^1.11.11",
     "next": "14.2.4",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
   },
