--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "antd": "^5.18.1",
     "dayjs": "^1.11.11",
+    "firebase": "^10.12.2",
     "next": "14.2.4",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "daisyui": "^4.12.2",
