--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
